[gd_scene load_steps=6 format=3 uid="uid://b8x8j7d4y2n8v"]

[ext_resource type="Script" uid="uid://cwkugpg51d0oc" path="res://example/scenes/server_scene.gd" id="1_server"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="2_d3vq7"]
[ext_resource type="Script" uid="uid://c1benr11ctaj0" path="res://addons/nefn/server/server_manager.gd" id="2_server"]
[ext_resource type="Script" uid="uid://3lbngqcexe0l" path="res://addons/netfox/state-synchronizer.gd" id="3_tam6j"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="4_5r6fe"]

[node name="ServerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_server")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_d3vq7")
root = NodePath("../TickInterpolator")
metadata/_custom_type_script = ExtResource("2_d3vq7")

[node name="StateSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("3_tam6j")
root = NodePath("..")
metadata/_custom_type_script = ExtResource("3_tam6j")

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_5r6fe")
root = NodePath("..")
metadata/_custom_type_script = ExtResource("4_5r6fe")

[node name="ServerManager" type="Node" parent="."]
script = ExtResource("2_server")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="PanelContainer" parent="UI"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Header"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Header/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/Header/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NEFN Server Control Panel"
horizontal_alignment = 1

[node name="Status" type="Label" parent="UI/Header/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Stopped"
horizontal_alignment = 1

[node name="Controls" type="PanelContainer" parent="UI"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Controls"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Controls/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="UI/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="IPLabel" type="Label" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Server IP:"

[node name="IPInput" type="LineEdit" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0.0.0.0"
placeholder_text = "Server IP"

[node name="PortLabel" type="Label" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="SpinBox" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 65535.0
value = 7350.0

[node name="MaxClientsLabel" type="Label" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Max Clients:"

[node name="MaxClientsInput" type="SpinBox" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 32.0

[node name="TickRateLabel" type="Label" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tick Rate:"

[node name="TickRateInput" type="SpinBox" parent="UI/Controls/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 240.0
value = 64.0

[node name="HSeparator" type="HSeparator" parent="UI/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Features" type="GridContainer" parent="UI/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MultithreadingToggle" type="CheckButton" parent="UI/Controls/MarginContainer/VBoxContainer/Features"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Multithreading"

[node name="PacketBatchingToggle" type="CheckButton" parent="UI/Controls/MarginContainer/VBoxContainer/Features"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Packet Batching"

[node name="RollbackToggle" type="CheckButton" parent="UI/Controls/MarginContainer/VBoxContainer/Features"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Rollback Netcode"

[node name="AntiCheatToggle" type="CheckButton" parent="UI/Controls/MarginContainer/VBoxContainer/Features"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Anti-Cheat"

[node name="HSeparator2" type="HSeparator" parent="UI/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="UI/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="UI/Controls/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Server"

[node name="StopButton" type="Button" parent="UI/Controls/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Stop Server"

[node name="Stats" type="PanelContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Stats/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Statistics"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="UI/Stats/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UptimeLabel" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Uptime: 0s"

[node name="PlayersLabel" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Players: 0/32"

[node name="MemoryLabel" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Memory: 0 MB"

[node name="ThreadsLabel" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Active Threads: 0"

[node name="BannedLabel" type="Label" parent="UI/Stats/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Banned Players: 0"

[node name="Log" type="PanelContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Log"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Log/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/Log/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Log"
horizontal_alignment = 1

[node name="LogText" type="RichTextLabel" parent="UI/Log/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
